--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
     <section class="section" id="section-1">
         <h2>Sección 1</h2>
         <h1>Reloj digital y Alarma</h1>
-        <div id="clock" class="clock">Clock</div>
+        <div id="clock" class="clock"></div>
         <button type="button" id="startClock"> Iniciar Reloj</button>
         <button type="button" id="stopClock"> Detener Reloj</button>
         <button type="button" id="startAlarm"> Iniciar alarma</button>
-        <button type="button" id="stopAlarm"> Iniciar detener</button>
+        <button type="button" id="stopAlarm"> Detener alarma</button>
+        <audio src="js/alarmSound.mp4"></audio>
     </section>
     <section class="section" id="section-2">
         <h2>Sección 2</h2>
