key events, move ball ok, shortCuts ok

--- a/index.html
+++ b/index.html
@@ -22,20 +22,22 @@
           <button type="button" id="stopClock" class="clock-btn"> Detener Reloj</button>
           <button type="button" id="startAlarm" class="clock-btn"> Iniciar alarma</button>
           <button type="button" id="stopAlarm" class="clock-btn"> Detener alarma</button>
-          <!-- <audio src="Assets/alarmSound.mp4"></audio> -->
         </div>
     </section>
     <section class="section" id="section-2">
-        <h2>Sección 2</h2>
+        <h1>Eventos del teclado</h1>
+        <div class="ball-container" id="ballContainer">
+          <div class="ball" id="ball"></div>
+        </div>
     </section>
     <section class="section" id="section-3">
-        <h2>Sección 3</h2>
+        <h1>Sección 3</h1>
     </section>
     <section class="section" id="section-4">
-        <h2>Sección 4</h2>
+        <h1>Sección 4</h1>
     </section>
     <section class="section" id="section-5">
-        <h2>Sección 5</h2>
+        <h1>Sección 5</h1>
     </section>
   </main>
   <div class="menu-btnOk">
@@ -49,7 +51,7 @@
   <div id="overlay" class="overlay">
     <aside class="panel-menu">
       <a href="#section-1">Reloj digital y Alarma</a>
-      <a href="#section-2">Sección 2</a>
+      <a href="#section-2">Eventos del teclado</a>
       <a href="#section-3">Sección 3</a>
       <a href="#section-4">Sección 4</a>
       <a href="#section-5">Sección 5</a>
