--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         </div>
     </section>
     <section class="section" id="section-3">
-        <h1>Sección 3</h1>
+        <h1>Countdown</h1>
+        <h3>cuenta regresiva para tu cumpleaños</h3>
+        <div class="conutdowa" id="countdown">
+          <span id="days">días </span><span id="hours">horas </span><span id="minutes">minutos </span><span id="seconds">segundos </span>
+        </div>
     </section>
     <section class="section" id="section-4">
         <h1>Sección 4</h1>
@@ -52,7 +56,7 @@
     <aside class="panel-menu">
       <a href="#section-1">Reloj digital y Alarma</a>
       <a href="#section-2">Eventos del teclado</a>
-      <a href="#section-3">Sección 3</a>
+      <a href="#section-3">Countdown</a>
       <a href="#section-4">Sección 4</a>
       <a href="#section-5">Sección 5</a>
     </aside>
