--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </section>
     <section class="section" id="section-3">
         <h1>Countdown</h1>
-        <h3>cuenta regresiva para tu cumpleaños</h3>
-        <div class="conutdowa" id="countdown">
+        <h3>Cuenta regresiva para tu cumpleaños</h3>
+        <div class="countdown" id="countdown">
           <span id="days">días </span><span id="hours">horas </span><span id="minutes">minutos </span><span id="seconds">segundos </span>
         </div>
     </section>
