--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
       </span>
     </button>
   </div>
+  <div>
+    <button class="home-btn hidden" id="homeBtn">
+      <!-- <img src="./Assets/increase.svg" alt=""> -->
+      &#11014
+    </button>
+  </div>
   <div id="overlay" class="overlay">
     <aside class="panel-menu">
       <a href="#section-1">Reloj digital y Alarma</a>
