Js responsive ok

--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
         </div>
     </section>
     <section class="section" id="section-4">
-        <h1>Sección 4</h1>
+        <h1>Responsive con Javascript</h1>
+        <div id="video"></div>
+        <div id="gmaps"></div>
     </section>
     <section class="section" id="section-5">
         <h1>Sección 5</h1>
@@ -66,7 +68,7 @@
       <a href="#section-1">Reloj digital y Alarma</a>
       <a href="#section-2">Eventos del teclado</a>
       <a href="#section-3">Countdown</a>
-      <a href="#section-4">Sección 4</a>
+      <a href="#section-4">Responsive con Javascript</a>
       <a href="#section-5">Sección 5</a>
     </aside>
   </div>
