--- a/index.html
+++ b/index.html
@@ -44,7 +44,24 @@
         <div id="gmaps"></div>
     </section>
     <section class="section" id="section-5">
-        <h1>Sección 5</h1>
+        <h1>Responsive Tester</h1>
+        <form action="">
+          <label for="webLink">link</label>
+          <br>
+          <input type="text" id="webLink">
+          <br>
+          <label for="webWidth">Ancho</label>
+          <br>
+          <input type="text" id="webWidth">
+          <br>
+          <label for="webHeight">Alto</label>
+          <br>
+          <input type="text" id="webHeight">
+          <br>
+          <input type="button" name="" id="submitBtn" value="Probar">
+          <input type="button" name="" id="closeBtn" value="Cerrar">
+          
+        </form>
     </section>
   </main>
   <div class="menu-btnOk">
@@ -69,7 +86,7 @@
       <a href="#section-2">Eventos del teclado</a>
       <a href="#section-3">Countdown</a>
       <a href="#section-4">Responsive con Javascript</a>
-      <a href="#section-5">Sección 5</a>
+      <a href="#section-5">Responsive Tester</a>
     </aside>
   </div>
   <script src="js/ejercicios.js" type="module"></script>
