--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </section>
     <section class="section" id="section-4">
         <h1>Responsive con Javascript</h1>
+        cada elemento se carga en función del dispositivo en el que se abra esta página (versión desktop o mobile)
         <div id="video"></div>
         <div id="gmaps"></div>
     </section>
