add networkStatus, dispositivos, webcam, geolocation

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <div id="video"></div>
         <div id="gmaps"></div>
     </section>
-    <section class="section" id="section-5">
+    <class class="section" id="section-5">
         <h1>Responsive Tester</h1>
         <form id="responsiveTester">
           <input name="linkUrl" type="url" placeholder="ingresa una URL" required>
@@ -67,6 +67,28 @@
           <input type="submit" name="tester" id="submitBtn" value="Probar">
           <input type="button" name="close" id="closeBtn" value="Cerrar">
         </form>
+    </class>
+    <section class="section" id="section-6">
+      <h1>Detección de dispositivos (User Agent)</h1>
+      <div id="user-device"></div>
+    </section>
+    <section class="section" id="section-7">
+      <h1>Detección de conexión</h1>
+      <!-- <div class="connection-message"></div> -->
+    </section>
+    <section class="section" id="section-8">
+      <h1>Detección de la Cámara Web</h1>
+      <div class="web-Cam" id="webContainer">
+        <br>
+        <button id="initCam">Abrir Cámara</button>
+      </div>
+    </section>
+    <section class="section" id="section-9">
+      <h1>Geolocalización</h1>
+      <div class="geo" id="geo"></div>
+    </section>
+    <section class="section" id="section-10">
+      <h1>sección 10</h1>
     </section>
   </main>
   <div class="menu-btnOk">
@@ -92,12 +114,16 @@
       <a href="#section-3">Countdown</a>
       <a href="#section-4">Responsive con Javascript</a>
       <a href="#section-5">Responsive Tester</a>
+      <a href="#section-6">Detección de dispositivos (User Agent)</a>
+      <a href="#section-7">Detección de conexión</a>
+      <a href="#section-8">Detección de la Cámara Web</a>
+      <a href="#section-9">Geolocalización</a>
+      <a href="#section-10">sección 10</a>
     </aside>
   </div>
   <script src="js/ejercicios.js" type="module"></script>
 </body>
 </html>
-
 
 
 
