Ex 10: search Filter Images ok

--- a/index.html
+++ b/index.html
@@ -88,7 +88,36 @@
       <div class="geo" id="geo"></div>
     </section>
     <section class="section" id="section-10">
-      <h1>sección 10</h1>
+      <h1>Filtros de búsqueda</h1>
+      <form>
+        <input type="search" name="filter" id="searchImgs" class="card-filter" placeholder="Buscar...">
+      </form>
+      <article class="cards" id="cards">
+        <figure class="card">
+          <img src="http://placeimg.com/200/200/tech" alt="Tech">
+          <figcaption>Tech</figcaption>
+        </figure>
+        <figure class="card">
+          <img src="http://placeimg.com/200/200/animals" alt="Animals">
+          <figcaption>Animals</figcaption>
+        </figure>
+        <figure class="card">
+          <img src="http://placeimg.com/200/200/people" alt="People">
+          <figcaption>People</figcaption>
+        </figure>
+        <figure class="card">
+          <img src="http://placeimg.com/200/200/arch" alt="Arch">
+          <figcaption>Arch</figcaption>
+        </figure>
+        <figure class="card">
+          <img src="http://placeimg.com/200/200/nature" alt="Nature">
+          <figcaption>Nature</figcaption>
+        </figure>
+        <figure class="card">
+          <img src="http://placeimg.com/200/200/any" alt="Any">
+          <figcaption>Any</figcaption>
+        </figure>
+      </article>
     </section>
   </main>
   <div class="menu-btnOk">
@@ -118,7 +147,7 @@
       <a href="#section-7">Detección de conexión</a>
       <a href="#section-8">Detección de la Cámara Web</a>
       <a href="#section-9">Geolocalización</a>
-      <a href="#section-10">sección 10</a>
+      <a href="#section-10">Filtros de búsqueda</a>
     </aside>
   </div>
   <script src="js/ejercicios.js" type="module"></script>
