Search filter OK, lottery V1

--- a/index.html
+++ b/index.html
@@ -119,6 +119,24 @@
         </figure>
       </article>
     </section>
+    <section class="section" id="section-11">
+      <h1>Sorteo Digital</h1>
+      <div class="sorteo" id="sorteo">
+      </div>
+      <input type="button" value="Obtener Ganador" id="winnerBtn">
+    </section>
+    <section class="section" id="section-12">
+      <h1>Sección 12</h1>
+    </section>
+    <section class="section" id="section-13">
+      <h1>Sección 13</h1>
+    </section>
+    <section class="section" id="section-14">
+      <h1>Sección 14</h1>
+    </section>
+    <section class="section" id="section-15">
+      <h1>Sección 15</h1>
+    </section>
   </main>
   <div class="menu-btnOk">
     <!-- button library -->
@@ -148,6 +166,11 @@
       <a href="#section-8">Detección de la Cámara Web</a>
       <a href="#section-9">Geolocalización</a>
       <a href="#section-10">Filtros de búsqueda</a>
+      <a href="#section-11">Sorteo Digital</a>
+      <a href="#section-12">sección 12</a>
+      <a href="#section-13">sección 13</a>
+      <a href="#section-14">sección 14</a>
+      <a href="#section-15">sección 15</a>
     </aside>
   </div>
   <script src="js/ejercicios.js" type="module"></script>
