sorteo ok, Responsive Slider V1

--- a/index.html
+++ b/index.html
@@ -121,12 +121,20 @@
     </section>
     <section class="section" id="section-11">
       <h1>Sorteo Digital</h1>
-      <div class="sorteo" id="sorteo">
-      </div>
+      <div class="sorteo" id="sorteo"></div>
       <input type="button" value="Obtener Ganador" id="winnerBtn">
     </section>
     <section class="section" id="section-12">
-      <h1>Sección 12</h1>
+      <h1>Responsive Slider</h1>
+      <div class="slider" id="sliderContent">
+        <figure>
+          <img src="./Assets/Slider/dev.jpeg" alt="img">
+        </figure>
+        <div class="controls-slider">
+          <button id="back" class="sliderBtn"><=</button>
+          <button id="next" class="sliderBtn">=></button>
+        </div>
+      </div>
     </section>
     <section class="section" id="section-13">
       <h1>Sección 13</h1>
@@ -167,7 +175,7 @@
       <a href="#section-9">Geolocalización</a>
       <a href="#section-10">Filtros de búsqueda</a>
       <a href="#section-11">Sorteo Digital</a>
-      <a href="#section-12">sección 12</a>
+      <a href="#section-12">Responsive Slider</a>
       <a href="#section-13">sección 13</a>
       <a href="#section-14">sección 14</a>
       <a href="#section-15">sección 15</a>
