dynamic slider V1 ok

--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
           <img src="./Assets/Slider/dev.jpeg" alt="img">
         </figure>
         <div class="controls-slider">
-          <button id="back" class="sliderBtn"><=</button>
-          <button id="next" class="sliderBtn">=></button>
+          <button id="back" class="sliderBtn">&laquo;</button>
+          <button id="next" class="sliderBtn">&raquo;</button>
         </div>
       </div>
     </section>
