smart video v1 mascotas

--- a/index.html
+++ b/index.html
@@ -137,7 +137,10 @@
       </div>
     </section>
     <section class="section" data-scroll-spy id="section-13">
-      <h1>Sección 13</h1>
+      <h1>Video Inteligente</h1>
+      <video id="smartVideo" height="500" controls muted>
+        <source src="./Assets/mascotas.mp4">
+      </video>
     </section>
     <section class="section" data-scroll-spy id="section-14">
       <h1>Sección 14</h1>
@@ -176,7 +179,7 @@
       <a href="#section-10" data-scroll-spy>Filtros de búsqueda</a>
       <a href="#section-11" data-scroll-spy>Sorteo Digital</a>
       <a href="#section-12" data-scroll-spy>Responsive Slider</a>
-      <a href="#section-13" data-scroll-spy>sección 13</a>
+      <a href="#section-13" data-scroll-spy>Video Inteligente</a>
       <a href="#section-14" data-scroll-spy>sección 14</a>
       <a href="#section-15" data-scroll-spy>sección 15</a>
     </aside>
