narrador de voz ok

--- a/index.html
+++ b/index.html
@@ -160,7 +160,16 @@
       </div>
     </section>
     <section class="section" data-scroll-spy id="section-15">
-      <h2>Sección 15</h2>
+      <h2>Narrador</h2>
+      <select id="speech-select">
+        <option value="">--- elige Una Voz</option>
+      </select>
+      <br>
+      <br>
+      <textarea id="speech-area" cols="50" rows="5" placeholder="Ingresa un Texto para leerlo"></textarea>
+      <br>
+      <br>
+      <button id="speech-btn">Leer Texto</button>
     </section>
   </main>
   <div class="menu-btnOk">
@@ -195,7 +204,7 @@
       <a href="#section-12" data-scroll-spy>Responsive Slider</a>
       <a href="#section-13" data-scroll-spy>Video Inteligente</a>
       <a href="#section-14" data-scroll-spy>Formulario de Contacto (Validaciones)</a>
-      <a href="#section-15" data-scroll-spy>sección 15</a>
+      <a href="#section-15" data-scroll-spy>Narrador</a>
     </aside>
   </div>
   <script src="js/ejercicios.js" type="module"></script>
